--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:24.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
